Wed Feb 29 07:21:40 UTC 2012  Johnny Willemsen  <jwillemsen@remedy.nl>

        * tao/Compression/bzip2/Bzip2Compressor.cpp:
        * tao/Compression/lzo/LzoCompressor.cpp:
          Fixed bugs in these compressors

Tue Feb 28 19:05:53 UTC 2012  Johnny Willemsen  <jwillemsen@remedy.nl>

        * TAO_IDL/be/be_visitor_operation/amh_ss.cpp:
          Check result of dynamic_cast

Tue Feb 28 14:44:28 UTC 2012  Johnny Willemsen  <jwillemsen@remedy.nl>

        * tao/RTScheduling/Current.cpp:
          Fixed coverity error

Tue Feb 28 14:25:06 UTC 2012  Johnny Willemsen  <jwillemsen@remedy.nl>

        * tao/RTScheduling/RTScheduler_Manager.h:
        * tao/RTScheduling/RTScheduler_Manager.cpp:
          Fixed coverity error

Tue Feb 28 08:00:57 UTC 2012  Johnny Willemsen  <jwillemsen@remedy.nl>

        * tao/Compression/lzo/LzoCompressor.cpp:
          Layout changes

        * tao/Compression/rle/RLECompressor.cpp:
        * tao/Compression/zlib/ZlibCompressor.cpp:
          Fixed some bugs in these compressors

        * tao/Valuetype/StringValue.pidl:
          Layout changes

Mon Feb 27 09:47:29 UTC 2012  Johnny Willemsen  <jwillemsen@remedy.nl>

        * tao/Compression/zlib/ZlibCompressor_Factory.h:
        * tao/Compression/zlib/ZlibCompressor_Factory.cpp:
          Fixed fuzz

Mon Feb 27 08:16:27 UTC 2012  Johnny Willemsen  <jwillemsen@remedy.nl>

        * tao/Compression/zlib/ZlibCompressor_Factory.h:
        * tao/Compression/zlib/ZlibCompressor_Factory.cpp:
          Put compressors into a map for reuse

Fri Feb 24 09:18:00 UTC 2012  Johnny Willemsen  <jwillemsen@remedy.nl>

        * tao/orbconf.h:
          If ZIOP is not defined and we have messaging, set it to 0

Thu Feb 23 19:08:43 UTC 2012  Phil Mesnier  <mesnier_p@ociweb.com>

        * orbsvcs/ImplRepo_Service/ImR_Locator_i.cpp:
          Differentiate a connection timeout vs message timeout when checking
          to see if a server is alive. On some Windows platforms at least, a