@@ -26,7 +26,8 @@ TAO::SSLIOP::Connection_Handler::Connection_Handler (
     ACE_Thread_Manager *t)
   : SVC_HANDLER (t, 0 , 0),
     TAO_Connection_Handler (0),
-    current_ ()
+    current_ (),
+    tcp_properties_ (0)
 {
   // This constructor should *never* get called, it is just here to
   // make the compiler happy: the default implementation of the
@@ -39,7 +40,8 @@ TAO::SSLIOP::Connection_Handler::Connection_Handler (
 TAO::SSLIOP::Connection_Handler::Connection_Handler (TAO_ORB_Core *orb_core)
   : SVC_HANDLER (orb_core->thr_mgr (), 0, 0),
     TAO_Connection_Handler (orb_core),
-    current_ ()
+    current_ (),
+    tcp_properties_ (0)
 {
   this->current_ = TAO::SSLIOP::Util::current (orb_core);
 
